--- a/roles/grafana/tasks/main.yaml
+++ b/roles/grafana/tasks/main.yaml
@@ -55,11 +55,18 @@
     mode: '0755'
   notify: Restart grafana
 
+- name: Copy syslog json file to dashboard
+  ansible.builtin.copy:
+    src: syslog.json
+    dest: /var/lib/grafana/dashboards/
+    mode: '0755'
+  notify: Restart grafana
+
 - name: Ensure Grafana service is started and enabled
   ansible.builtin.service:
     name: grafana-server
     state: started
     enabled: yes
-
+  notify: Restart grafana
 
     
