--- a/roles/influxdb/templates/telegraf.conf
+++ b/roles/influxdb/templates/telegraf.conf
@@ -22,7 +22,7 @@
 [[inputs.processes]]
 [[inputs.swap]]
 [[outputs.influxdb]]
-[[outputs.prometheus_client]]
+  database = "telegraf"
   listen = ":9273"
 [[inputs.syslog]]
   server = "udp://:6514"
