--- a/infra.yaml
+++ b/infra.yaml
@@ -1,4 +1,3 @@
----
 - name: Initial setup
   hosts: all
   roles:
@@ -30,7 +29,7 @@
     - mysql
 
 - name: InfluxDB
-  hosts: influx
+  hosts: influxdb
   roles:
     - influxdb
 
@@ -39,6 +38,11 @@
   roles:
     - agama
     - uwsgi
+
+- name: Agama-Client setup
+  hosts: agama_client
+  roles:
+    - agama_client
 
 - name: Web server setup
   hosts: web_servers
