--- a/roles/agama_client/templates/agama-client.conf
+++ b/roles/agama_client/templates/agama-client.conf
@@ -1,3 +1,3 @@
-database_url=http://influxdb.daayso.da
-database_name=daayso.da
-subnet=192.168.0.0/23
+database_url=http://davidayson8-2:8086
+database_name=agamaDB
+subnet=192.168.42.0/23
