--- a/roles/grafana/templates/dashboards.yaml
+++ b/roles/grafana/templates/dashboards.yaml
@@ -1,10 +1,17 @@
 apiVersion: 1
 
 providers:
- - name: 'Main'
-   orgId: 1
-   folder: ''
-   folderUid: ''
-   type: file
-   options:
-     path: /etc/grafana/provisioning/dashboards
+  - name: 'Main'
+    orgId: 1
+    folder: ''
+    folderUid: ''
+    type: file
+    options:
+      path: /var/lib/grafana/dashboards
+  - name: 'Syslog'
+    orgId: 1
+    folder: ''
+    folderUid: ''
+    type: file
+    options:
+      path: /var/lib/grafana/dashboards
