--- a/roles/init/templates/rsyslog.conf
+++ b/roles/init/templates/rsyslog.conf
@@ -1,6 +1,8 @@
-$ActionQueueType LinkedList
-$ActionQueueFileName srvrfwd
-$ActionResumeRetryCount -1
-$ActionQueueSaveOnShutdown on 
-
-*.* @influxdb:6514;RSYSLOG_SyslogProtocol23Format
+$ActionQueueType LinkedList # use asynchronous processing
+$ActionQueueFileName srvrfwd # set file name, also enables disk mode
+$ActionResumeRetryCount -1 # infinite retries on insert failure
+$ActionQueueSaveOnShutdown on # save in-memory data if rsyslog shuts down
+$ModLoad imudp #loads the udp module  
+$UDPServerAddress localhost 
+$UDPServerRun 514 
+*.* @davidayson8-2:6514;RSYSLOG_SyslogProtocol23Format
