--- a/roles/uwsgi/tasks/main.yaml
+++ b/roles/uwsgi/tasks/main.yaml
@@ -17,6 +17,7 @@
     dest: /etc/uwsgi/apps-enabled/agama.ini
     mode: '0600'
     owner: agama
+  no_log: true
   notify: Restart uwsgi
 
 - name: Ensure the uWSGI service is started
