--- a/roles/influxdb/handlers/main.yaml
+++ b/roles/influxdb/handlers/main.yaml
@@ -11,3 +11,8 @@
 - name: Restart Systemctl
   ansible.builtin.systemd:
     daemon_reload: yes
+
+- name: Restart cron
+  ansible.builtin.service:
+    name: cron
+    state: restarted
