--- a/roles/mysql/handlers/main.yaml
+++ b/roles/mysql/handlers/main.yaml
@@ -12,3 +12,27 @@
   ansible.builtin.service:
     name: cron
     state: restarted
+
+- name: Reset MySQL source
+  community.mysql.mysql_replication:
+    mode: "{{ item }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+  loop:
+    - stopreplica
+    - resetprimary
+  when: inventory_hostname == mysql_host
+
+- name: Reset MySQL replica
+  community.mysql.mysql_replication:
+    mode: "{{ item }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+    primary_host: "{{ mysql_host }}"
+    primary_user: "{{ replication_user }}"
+    primary_password: "{{ replication_password }}"
+  loop:
+    - stopreplica
+    - changeprimary
+    - resetreplica
+    - startreplica
+  when: inventory_hostname != mysql_host
+  no_log: true
