--- a/roles/agama/tasks/main.yaml
+++ b/roles/agama/tasks/main.yaml
@@ -1,31 +1,34 @@
----
-- name: Create agama user
-  ansible.builtin.user:
-    name: agama
-    state: present
-    shell: /bin/bash
-    create_home: yes
-
-- name: Create /opt/agama directory
+- name: Make Agama Directory 
   ansible.builtin.file:
-    state: directory
     path: /opt/agama
-    owner: agama
-
-- name: Install agama dependencies
-  ansible.builtin.apt:
-    name:
-      - python3 
-      - python3-venv
-      - sqlite3
-      - python3-flask
-      - python3-flask-sqlalchemy
-      - python3-jinja2
-      - python3-pymysql
-    state: present
+    state: directory
 
 - name: Install agama application
   ansible.builtin.get_url:
     url: https://raw.githubusercontent.com/hudolejev/agama/master/agama.py
     dest: /opt/agama/agama.py
   
+- name: Download docker agama
+  ansible.builtin.get_url:
+    url: https://raw.githubusercontent.com/hudolejev/agama/master/Dockerfile
+    dest: /opt/agama/Dockerfile
+
+- name: Build Docker Image
+  community.docker.docker_image:
+  name: agama
+  source: build
+  build:
+    path: /opt/agama
+
+- name: Create Data Container 
+  community.docker.docker_container:
+    name: agama
+    image: agama
+    state: present
+    volumes: /opt/agama:/opt/agama
+    env: 
+      AGAMA_DATABASE_URI=mysql+pymysql://{{ mysql_user }}:{{ mysql_password }}@{{ mysql_host }}/{{mysql_database}}
+    ports: "{{ agama_port }}:8000"
+    state: started
+    restart_policy: always
+  no_log: true
