--- a/roles/haproxy/tasks/main.yaml
+++ b/roles/haproxy/tasks/main.yaml
@@ -21,3 +21,9 @@
     dest: /etc/default/prometheus-haproxy-exporter
     mode: '0644'
   notify: Restart Haproxy Exporter
+
+  - name: Assign cnames
+  include_role:
+    name: "cname"
+  vars:
+    service: "lb{{inventory_hostname | replace('davidayson8','')}}"
