--- a/roles/keepalived/templates/keepalived-exporter.service
+++ b/roles/keepalived/templates/keepalived-exporter.service
@@ -5,7 +5,7 @@ After=network-online.target
 
 [Service]
 User=root
-ExecStart=/usr/local/bin/keepalived-exporter-1.2.0.linux-amd64/keepalived-exporter
+ExecStart=/usr/local/bin/keepalived-exporter
 
 [Install]
 WantedBy=multi-user.target
