--- a/roles/grafana/templates/dashboards.yaml
+++ b/roles/grafana/templates/dashboards.yaml
@@ -8,7 +8,7 @@ providers:
     type: file
     options:
       path: /etc/grafana/provisioning/dashboards
-   - name: 'MySQL'
+  - name: 'MySQL'
     orgId: 1
     folder: ''
     folderUid: ''
@@ -23,8 +23,9 @@ providers:
     options:
       path: /etc/grafana/provisioning/dashboards
   - name: 'Backups'
-    orgID: 1
+    orgId: 1
     folder: ''
     folderUid: ''
+    type: file
     options:
       path: /etc/grafana/provisioning/dashboards
