--- a/roles/nginx/tasks/main.yaml
+++ b/roles/nginx/tasks/main.yaml
@@ -3,11 +3,6 @@
     name: nginx
     state: present
 
-- name: Install Prometheus-Nginx-Exporter
-  ansible.builtin.apt:
-    name: prometheus-nginx-exporter
-    state: present
-
 - name: default Nginx config
   ansible.builtin.template:
     src: default.j2
@@ -16,20 +11,26 @@
     force: yes
   notify: 
     - Restart nginx
-    - Restart nginx prometheus
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
  
-- name: Ensure Nginx and Prometheus services are started and enabled
+- name: Ensure Nginx services are started and enabled
   ansible.builtin.service:
-    name: "{{ item }}"
+    name: nginx
     state: started
     enabled: true
-  loop:
-    - nginx
-    - prometheus-nginx-exporter
-  notify:
-    - Restart nginx
-    - Restart nginx prometheus
-    - Restart systemd
+
+- name: Install Nginx Exporter
+  ansible.builtin.apt:
+    name: prometheus-nginx-exporter
+    state: present
+
+- name: Ensure Prometheus-nginx-exporter is started and enabled
+  ansible.builtin.service:
+    name: prometheus-nginx-exporter
+    state: started
+    enabled: true
 
 - name: Assign cnames
   include_role:
